# sandstorm-starkware-verifier-integration

./: Cargo.toml  README.md  air-private-input.json  air-public-input.json  bootloader_compiled.json  bootloader_inputs.json  cairo-program.json  gen_bootloader.py  new  original  test.cairo  understanding_merkle_tree.md
example/: air-private-input.json  air-public-input.json  test.cairo  test_input.json
proof-experimentation/: batched_merkle.rs  main.rs
src/: CairoBootloaderProgram.sol  CpuOods.sol  FactRegistry.sol  GpsOutputParser.sol  MemoryMap.sol  MemoryPageFactRegistry.sol  StarkParameters.sol
src/gps/: CairoBootloaderProgram.sol  CairoBootloaderProgramModified.sol  CairoBootloaderProgramOriginal.sol  GpsOutputParser.sol  GpsStatementVerifier.sol  MemoryPageFactRegistry.sol
src/memory_page_fact_registry/: MemoryPageFactRegistry.sol
src/oods/: CpuOods.sol
src/periodic_columns/: PoseidonPoseidonPartialRoundKey0Column.sol
src/verifier/: CairoVerifierContract.sol  CpuConstraintPoly.sol  CpuFrilessVerifier.sol  CpuPublicInputOffsets.sol  CpuVerifier.sol  Fri.sol  FriLayer.sol  FriStatementContract.sol  FriStatementVerifier.sol  FriTransform.sol  HornerEvaluator.sol  LayoutSpecific.sol  MemoryAccessUtils.sol  MerkleStatementContract.sol  MerkleStatementVerifier.sol  MerkleVerifier.sol  Prng.sol  PublicMemoryOffsets.sol  StarkVerifier.sol  VerifierChannel.sol
test/: AutoGenProofData.sol  GpsVerifier.t.sol  MyProofData.sol  ProofData.sol
